Create Project Notebook and clean up other docs
Created the Project Notebook and wrote the first entry. Gets the project
officially started. Document formatting and setup has now been
established.

Templates were created to ease the process of writing entries. Will make
notebooking easier.

README and Design Doc had a few minor sytnax edits. Cleaned it up.
Both are far from ready, any edits are largely insiginificant.

--- a/.obsidian/app.json
+++ b/.obsidian/app.json
@@ -1,1 +1,8 @@
-{}
+{
+  "livePreview": true,
+  "strictLineBreaks": true,
+  "showLineNumber": false,
+  "userIgnoreFilters": [
+    "project_planning/project_notebook/notebook_templates/"
+  ]
+}
