Remove design doc and add new notebook entry
Removed the design doc. Notebook entry explains more of the rationale,
but overall it was too much work to keep. Removing it makes time
management and workload easier.

It was not likely anyone would even read that doc. Those exist more for
stakeholders and project teams. A notebook is more than enough.

--- a/docs/.obsidian/app.json
+++ b/docs/.obsidian/app.json
@@ -4,5 +4,6 @@
   "showLineNumber": false,
   "userIgnoreFilters": [
     "project_planning/project_notebook/notebook_templates/"
-  ]
+  ],
+  "alwaysUpdateLinks": true
 }
